# google-workspace-mcp

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/gws-adapter-google/: Cargo.toml
crates/gws-adapter-google/src/: auth.rs  client.rs  lib.rs  notebooklm.rs
crates/gws-adapter-mcp/: Cargo.toml
crates/gws-adapter-mcp/src/: server.rs  tools.rs
crates/gws-domain/: Cargo.toml
crates/gws-domain/src/: models.rs
crates/gws-ffi-node/: Cargo.toml
crates/gws-ffi-node/src/: lib.rs
crates/gws-ffi-python/: Cargo.toml
crates/gws-ffi-python/src/: lib.rs
crates/gws-ports/: Cargo.toml
crates/gws-ports/src/: inbound.rs  lib.rs  outbound.rs
crates/gws-server/: Cargo.toml
crates/gws-server/src/: main.rs
mcpb/: manifest.json
scripts/: test-gmail-watch.mjs
src/__tests__/factory/: generator.test.ts
src/__tests__/server/: server.test.ts  tools.test.ts
src/accounts/: oauth.ts
src/factory/: generator.ts  manifest.yaml  types.ts
src/server/: handler.ts  tools.ts
src/services/notebooklm/: auth.ts  client.ts  index.ts
src/services/photos/: cli.ts  index.ts
src/services/photos/rust-cli/: Cargo.toml
src/services/photos/rust-cli/src/: main.rs
