[workspace]
resolver = "2"
members = [
    "crates/gws-domain",
    "crates/gws-ports",
    "crates/gws-adapter-google",
    "crates/gws-adapter-mcp",
    "crates/gws-ffi-node",
    "crates/gws-ffi-python",
    "crates/gws-server",
]

[workspace.dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json", "rustls-tls"] }
schemars = "0.8.16" # Used for MCP Schema Generator

[profile.release]
lto = "thin"
strip = true
