[package]
name = "gws-adapter-google"
version = "0.1.0"
edition = "2021"

[dependencies]
gws-domain = { path = "../gws-domain" }
gws-ports = { path = "../gws-ports" }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
urlencoding = "2.1.3"
base64 = "0.22"
uuid = { version = "1.23.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
open = "5"
url = "2"
