[package]
name = "gws-ffi-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gws-adapter-mcp = { path = "../gws-adapter-mcp" }
gws-adapter-google = { path = "../gws-adapter-google" }
napi = { version = "3.0.0-alpha.5", default-features = false, features = ["async", "serde-json"] }
napi-derive = "3.0.0-alpha.4"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
