[package]
name = "gws-ffi-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "gws_python"
crate-type = ["cdylib"]

[dependencies]
gws-adapter-mcp = { path = "../gws-adapter-mcp" }
gws-adapter-google = { path = "../gws-adapter-google" }
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
